Properties load fully working, added iterators

--- a/test.properties
+++ b/test.properties
@@ -3,12 +3,13 @@ key1 value1
 	#comment
 				  
 				  
-		key2		=  	value2 
- key3		=  	# !ӟ := value3
-	a			b\\
+
+				  key2		=  	value2 
+ key\n3		=  	# !ӟ := value3
+	\#a			b
   =	 
 =
 	keys : value1, \
 			value2, \
-			value 3 
+			value 3 \\\t\\
 			last	dernier
