Properties is ready

--- a/test.properties
+++ b/test.properties
@@ -1,15 +1,5 @@
-key1 value1
-		  ! comment
 	#comment
-				  
-				  
-
-				  key2		=  	value2 
- key\n3		=  	# !ӟ := value3
-	\#a			b
-  =	 
-=
-	keys : value1, \
-			value2, \
-			value 3 \\\t\\
-			last	dernier
+		  ! comment
+		  
+	\#la\ s#t\f\t\=\::	 	\f\tder n\f\f\fier \t\f
+	
