--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
+env:
+  global:
+  - secure: YbEh5J+epBZSO8lDkVlj9VOBBRzBzA5UnduIRU1VPCuZgr2IHJbk1gvcNMjktgl9uVC8atU3siY7HHMNA8bnNkkPekNa0zyMDdDKXKWR16p2QduJmHxBM6hydfPpytJbtWqM7aIfZ7+nxgygicAf12QhPH3GSRxhUhY3tfJ7fvU=
 before_install:
   - yes | sudo add-apt-repository ppa:hansjorg/rust
   - sudo apt-get update
 install:
   - sudo apt-get install rust-nightly
 script:
-  - rustc rustic.rs
+  - rustc rustic.rs && rustdoc rustic.rs
+after_script:
+  - curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
