--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+env:
+  global:
+    - secure: wIMcZ6nwvjGNw8qdMObEoiWYoKNkkE7bwyEV/IvWDOxvtbec/4ItKfmAwBdrw5L/fkMeSpSWnXokICSwUs2HRdymWUizvS2dm1wbOLfEq6pJfB4MZ+dHzXAioKXakJLn1uIRG+18qo/kDgv8KL7haW++ssdTXN2Zy+qsWRNbveE=
 before_install:
   - sudo add-apt-repository --yes ppa:hansjorg/rust
   - sudo add-apt-repository --yes ppa:cmrx64/cargo
