Update for Cargo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,9 @@
 
 name = "rustic"
 version = "0.0.1"
-authors = [ "christophe.pedretti@gmail.com" ]
+authors = ["Christophe Pedretti <christophe.pedretti@gmail.com>"]
 
 [[lib]]
 
 name = "rustic"
+path = "src/rustic.rs"
