--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ authors = ["Christophe Pedretti <christophe.pedretti@gmail.com>"]
 [[lib]]
 
 name = "rustic"
-path = "src/rustic.rs"
+path = "src/rustic2.rs"
