--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
   - sudo apt-get update -qq
 install:
   - sudo apt-get install -qq rust-nightly cargo
+  - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/lib/rust/rust-nightly/lib
   - rustc -v
 script:
   - cargo build
