Update for Cargo

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ install:
   - rustc -v
 script:
   - cargo build
+  - rustdoc src\rustic.rs
 after_script:
   - curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
