Compiling on Windows with Cargo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ name = "rustic"
 version = "0.0.1"
 authors = ["Christophe Pedretti <christophe.pedretti@gmail.com>"]
 
-[lib]
+[[lib]]
 
 name = "rustic"
