--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-
 name = "rustic"
 version = "0.0.1"
 authors = ["Christophe Pedretti <christophe.pedretti@gmail.com>"]
 
-[[lib]]
-
+[lib]
 name = "rustic"
+path = "src/rustic.rs"
