--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,5 @@ name = "rustic"
 version = "0.0.1"
 authors = ["Christophe Pedretti <christophe.pedretti@gmail.com>"]
 
-[lib]
+[[lib]]
 name = "rustic"
