--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ install:
   - sudo apt-get install -qq rust-nightly cargo
 script:
   - cargo build --verbose
-  - rustdoc src/rustic.rs
+  - rustdoc src/lib.rs
 after_script:
   - curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
